fixed alignment issue, added analysis

--- a/src/stylesheets/dashboard.css
+++ b/src/stylesheets/dashboard.css
@@ -198,7 +198,7 @@
 }
 
 .bg-dark-blue-2 {
-    background-color: #162D41;
+    background-color: #162D41 !important;
 }
 
 .bg-dark-blue-3 {
@@ -220,6 +220,13 @@
     margin: .5rem;
     /* border-bottom: 1px solid lightgrey; */
     margin-top: .8rem;
+}
+
+.form-select {
+    width: fit-content !important;
+    color: #00bc9b !important;
+    border: 1px solid #162D41 !important;
+    
 }
 
 .insight-name-container {
@@ -781,6 +788,14 @@
     font-family: 'MetropolisBold';
 }
 
+.card-height {
+    height: 300px;
+}
+
+.header-progress-bar {
+    display: none;
+}
+
 
 @media (max-width: 520px) {
     .action-bar {
@@ -796,6 +811,25 @@
         width: 100%;
     }
 
+    .progress-div {
+        display: none;
+    }
+
+    .card-height {
+        height: 220px;
+    }
+
+    .header-progress-bar {
+        display: flex;
+    }
+
+    .padding-top-20 {
+        padding-top: 6px;
+    }
+    
+    .padding-bottom-20 {
+        padding-bottom: 6px;
+    }
     
 }
 
@@ -812,6 +846,26 @@
 
     .dashboard-container {
         width: 100%;
+    }
+
+    .progress-div {
+        display: none;
+    }
+
+    .card-height {
+        height: 220px;
+    }
+
+    .header-progress-bar {
+        display: flex;
+    }
+
+    .padding-top-20 {
+        padding-top: 6px;
+    }
+    
+    .padding-bottom-20 {
+        padding-bottom: 6px;
     }
 
 }
